Fix paragraph spacing on public view and update Tailwind configuration

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -33,4 +33,7 @@
 .prose ol { list-style-type: decimal; margin: 1em 0; padding-left: 1.5em; }
 .prose ul { list-style-type: disc;    margin: 1em 0; padding-left: 1.5em; }
 .prose li { margin-bottom: .5em; }
+
+.prose p + p { margin-top: 1rem; }
+
 .prose ol li, .prose ul li { list-style-type: inherit; }
